--- a/src/.samples/samples.scss
+++ b/src/.samples/samples.scss
@@ -48,7 +48,6 @@ body, html, #app {
   margin: 0;
   position: fixed;
   overflow: hidden;
-  background: rgba(31, 226, 123, 0.45);
   //overflow: auto !important;
 }
 
